corpus/expressions.txt
==================
Variable
==================
{{ user }}
---
(template
  (output
    (variable)))

==================
Null
==================
{{ null }}
---
(template
  (output
    (null)))

==================
None
==================
{{ none }}
---
(template
  (output
    (null)))

==================
Integer
==================
{{ 42 }}
---
(template
  (output
    (number)))

==================
Float
==================
{{ 42.35 }}
---
(template
  (output
    (number)))

==================
True
==================
{{ true }}
---
(template
  (output
    (boolean)))

==================
False
==================
{{ false }}
---
(template
  (output
    (boolean)))

==================
String
==================
{{ 'hello' }}
---
(template
  (output
    (string)))

==================
String interpolation
==================
{{ "foo #{ 43 } #{ bar } baz" }}
---
(template
  (output
    (interpolated_string
      (string)
      (number)
      (string)
      (variable)
      (string))))

==================
String interpolation deeper
==================
{{ "foo #{"foo #{bar} baz"} baz" }}
---
(template
  (output
    (interpolated_string
      (string)
      (interpolated_string
        (string)
        (variable)
        (string))
      (string))))

==================
String interpolation escaped character
==================
{{ "foo \#{} \" \n" }}
---
(template
  (output
    (string)))

==================
Array empty
==================
{{ [] }}
---
(template
  (output
    (array)))

==================
Array
==================
{{ [1, 2, 'foo', "bar"] }}
---
(template
  (output
    (array
      (number)
      (number)
      (string)
      (string))))

==================
Array with end comma
==================
{{ [1, 2,] }}
---
(template
  (output
    (array
      (number)
      (number))))

==================
Array with spread element
==================
{{ [1, 2, ...moreNumbers] }}
---
(template
  (output
    (array
      (number)
      (number)
      (spread_element
        (variable)))))

==================
Object empty
==================
{{ {} }}
---
(template
  (output
    (object)))

==================
Object
==================
{{ {'foo': 'bar'} }}
---
(template
  (output
    (object
      (pair
        (string)
        (string)))))

==================
Object property keys as names
==================
{{ { foo: 'foo', bar: 'bar' } }}
---
(template
  (output
    (object
      (pair
        (identifier)
        (string))
      (pair
        (identifier)
        (string)))))

==================
Object property keys as integer
==================
{{ { 2: 'foo', 4: 'bar' } }}
---
(template
  (output
    (object
      (pair
        (number)
        (string))
      (pair
        (number)
        (string)))))

==================
Object property as the variable name
==================
{{ { foo } }}
---
(template
  (output
    (object
      (variable))))

==================
Object parentheses property
==================
{{ { (foo): 'foo' } }}
---
(template
  (output
    (object
      (pair
        (computed_property_name
          (variable))
        (string)))))

==================
Object with spread element
==================
{{ { 'foo': 10, ...moreRatings } }}
---
(template
  (output
    (object
      (pair
        (string)
        (number))
      (spread_element
        (variable)))))

==================
Arrow function with arguments
==================
{{ (a, b) => 42 }}
---
(template
  (output
    (arrow_function
      (parameter)
      (parameter)
      (number))))

==================
Arrow function without arguments
==================
{{ () => 42 }}
---
(template
  (output
    (arrow_function
      (number))))

==================
Arrow function single argument
==================
{{ v => 42 }}
---
(template
  (output
    (arrow_function
      (parameter)
      (number))))

==================
Parenthesized expression
==================
{{ (42) }}
---
(template
  (output
    (parenthesized_expression
      (number))))

==================
Member expression
==================
{{ user.name }}
---
(template
  (output
    (member_expression
      (variable)
      (property))))

==================
Member expression index
==================
{{ arr.0 }}
---
(template
  (output
    (member_expression
      (variable)
      (property))))

==================
Member expression deeper
==================
{{ user.name.first }}
---
(template
  (output
    (member_expression
      (member_expression
        (variable)
        (property))
      (property))))

==================
Subscript expression
==================
{{ user['name'] }}
---
(template
  (output
    (subscript_expression
      (variable)
      (string))))

==================
Subscript expression slice
==================
{{ '123456'[1:2] }}
{{ '123456'[:-2] }}
{{ [1,2,3][2:] }}
{{ [1,2,3][:] }}
---
(template
  (output
    (subscript_expression
      (string)
      (slice
        (number)
        (number))))
  (output
    (subscript_expression
      (string)
      (slice
        (unary_expression
          (number)))))
  (output
    (subscript_expression
      (array
        (number)
        (number)
        (number))
      (slice
        (number))))
  (output
    (subscript_expression
      (array
        (number)
        (number)
        (number))
      (slice))))

==================
Subscript expression negative first arg
==================
{{ '123456'[-2:] }}
---
(template
  (output
    (subscript_expression
      (string)
      (slice
        (unary_expression
          (number))))))

==================
Subscript expression deeper
==================
{{ user['name'][prop] }}
---
(template
  (output
    (subscript_expression
      (subscript_expression
        (variable)
        (string))
      (variable))))

==================
Call expression without arguments
==================
{{ range() }}
---
(template
  (output
    (call_expression
      (function)
      (arguments))))

==================
Call call expression
==================
{{ range()() }}
---
(template
  (output
    (call_expression
      (call_expression
        (function)
        (arguments))
      (arguments))))

==================
Call expression with arguments
==================
{{ range(0, 3) }}
---
(template
  (output
    (call_expression
      (function)
      (arguments
        (number)
        (number)))))

==================
Call expression with one argument
==================
{{ join(',') }}
---
(template
  (output
    (call_expression
      (function)
      (arguments
        (string)))))

==================
Call expression with one named argument
==================
{{ join(splitter=',') }}
---
(template
  (output
    (call_expression
      (function)
      (arguments
        (named_argument
          (variable)
          (string))))))

==================
Call expression with named arguments
==================
{{ range(low=1, high=10, step=2) }}
---
(template
  (output
    (call_expression
      (function)
      (arguments
        (named_argument
          (variable)
          (number))
        (named_argument
          (variable)
          (number))
        (named_argument
          (variable)
          (number))))))

==================
Call expression with arguments and named arguments
==================
{{ "now"|date(format: 'd/m/Y H:i', timezone="Europe/Paris") }}
---
(template
  (output
    (filter_expression
      (string)
      (function)
      (arguments
        (named_argument
          (variable)
          (string))
        (named_argument
          (variable)
          (string))))))

==================
Unary expression
==================
{{ -42 }}
---
(template
  (output
    (unary_expression
      (number))))

==================
Binary expression
==================
{{ a + b }}
---
(template
  (output
    (binary_expression
      (variable)
      (variable))))

==================
Binary and unary expressions
==================
{{ -42 + a * 'b' }}
---
(template
  (output
    (binary_expression
      (unary_expression
        (number))
      (binary_expression
        (variable)
        (string)))))

==================
Ternary operator
==================
{{ foo ? 'yes' : 'no' }}
---
(template
  (output
    (ternary_expression
      (variable)
      (string)
      (string))))

==================
Ternary operator short
==================
{{ foo ?: 'no' }}
---
(template
  (output
    (ternary_expression
      (variable)
      (string))))

==================
Empty Coalesce
==================
{% set choice = thingOne ??? thingTwo ??? thingThree ??? thingFour %}
---
(template
  (set
    (variable)
    (binary_expression
      (variable)
      (binary_expression
        (variable)
        (binary_expression
          (variable)
          (variable))))))

==================
Filter without arguments
==================
{{ name|title }}
---
(template
  (output
    (filter_expression
      (variable)
      (function))))

==================
Filter with arguments
==================
{{ name|join(', ') }}
---
(template
  (output
    (filter_expression
      (variable)
      (function)
      (arguments
        (string)))))

==================
Filter multiple
==================
{{ name|striptags|title }}
---
(template
  (output
    (filter_expression
      (filter_expression
        (variable)
        (function))
      (function))))

==================
Craft CMS: simple filters
==================
{{ content|address }}
{{ text|ascii }}
{{ name|camel }}
---
(template
  (output
    (filter_expression
      (variable)
      (function)))
  (output
    (filter_expression
      (variable)
      (function)))
  (output
    (filter_expression
      (variable)
      (function))))

==================
Craft CMS: filters with arguments
==================
{{ html|append('<span>test</span>') }}
{{ amount|currency('USD') }}
{{ content|namespace('form') }}
---
(template
  (output
    (filter_expression
      (variable)
      (function)
      (arguments
        (string))))
  (output
    (filter_expression
      (variable)
      (function)
      (arguments
        (string))))
  (output
    (filter_expression
      (variable)
      (function)
      (arguments
        (string)))))

==================
Craft CMS: filters with multiple arguments
==================
{{ items|contains('type', 'featured') }}
{{ entries|firstWhere('status', 'live') }}
---
(template
  (output
    (filter_expression
      (variable)
      (function)
      (arguments
        (string)
        (string))))
  (output
    (filter_expression
      (variable)
      (function)
      (arguments
        (string)
        (string)))))

==================
Craft CMS: advanced filters
==================
{{ 'data'|hash }}
{{ 'input[name]'|id }}
{{ 'secret'|encenc }}
{{ date|timestamp }}
{{ data|literal }}
{{ content|parseRefs }}
{{ userContent|purify }}
---
(template
  (output
    (filter_expression
      (string)
      (function)))
  (output
    (filter_expression
      (string)
      (function)))
  (output
    (filter_expression
      (string)
      (function)))
  (output
    (filter_expression
      (variable)
      (function)))
  (output
    (filter_expression
      (variable)
      (function)))
  (output
    (filter_expression
      (variable)
      (function)))
  (output
    (filter_expression
      (variable)
      (function))))

==================
Craft CMS: filter chains
==================
{{ entry.title|ascii|camel }}
{{ content|parseRefs|purify }}
{{ text|ascii|camel|id }}
---
(template
  (output
    (filter_expression
      (filter_expression
        (member_expression
          (variable)
          (property))
        (function))
      (function)))
  (output
    (filter_expression
      (filter_expression
        (variable)
        (function))
      (function)))
  (output
    (filter_expression
      (filter_expression
        (filter_expression
          (variable)
          (function))
        (function))
      (function))))

==================
Craft CMS: functions without arguments
==================
{{ csrfInput() }}
{{ collect() }}
---
(template
  (output
    (call_expression
      (function)
      (arguments)))
  (output
    (call_expression
      (function)
      (arguments))))

==================
Craft CMS: functions with single arguments
==================
{{ actionInput('users/save-user') }}
{{ siteUrl('company/contact') }}
{{ svg('@webroot/icons/lemon.svg') }}
{{ dataUrl(myAsset) }}
{{ seq('hits:' ~ entry.id) }}
---
(template
  (output
    (call_expression
      (function)
      (arguments
        (string))))
  (output
    (call_expression
      (function)
      (arguments
        (string))))
  (output
    (call_expression
      (function)
      (arguments
        (string))))
  (output
    (call_expression
      (function)
      (arguments
        (variable))))
  (output
    (call_expression
      (function)
      (arguments
        (binary_expression
          (string)
          (member_expression
            (variable)
            (property)))))))

==================
Craft CMS: functions with complex arguments
==================
{{ gql('{entries(limit: 2) { title }}') }}
{{ plugin('commerce').version }}
{{ collect(array) }}
{{ create('craft\\elements\\Entry') }}
---
(template
  (output
    (call_expression
      (function)
      (arguments
        (string))))
  (output
    (member_expression
      (call_expression
        (function)
        (arguments
          (string)))
      (property)))
  (output
    (call_expression
      (function)
      (arguments
        (variable))))
  (output
    (call_expression
      (function)
      (arguments
        (string)))))
